css/launchcircle.css
/* ... */
.modal-body form input:hover,
.modal-body form textarea:hover {
    border-bottom: 2px solid #12D4C4;
}

.modal-body form .custom-control-input:checked~.custom-control-indicator {
    background-color: #12D4C4;
}

.modal-body form input:focus,
.modal-body form textarea:focus {
    border-bottom: 2px solid #12D4C4;
    outline: none;
}

.modal-body form .custom-control-input:focus~.custom-control-indicator {
    box-shadow: 0 0 0 1px #fff, 0 0 0 3px #898AEA;
}

.modal-body form label .custom-control-description,
.modal-body form input {
    color: rgba(41, 43, 44, .77);
}

.modal-body form .help-block.with-errors {
    color: #F63E3E;
    font-size: .8em;
}

.modal-content .btn-primary.disabled,
.modal-content .btn-primary:disabled {
    background-color: dimgray;
    border-color: dimgray;
}

.modal-content .btn-primary.disabled:hover,
.modal-content .btn-primary:disabled:hover {
    background-color: darkgray;
    border-color: darkgray;
}

#subscribe-form .btn-primary.disabled,
#subscribe-form .btn-primary:disabled {
    background-color: rgba(18,212,196,1);
    border-color: rgba(18,212,196,1);
    color: #fff;
}

#subscribe-form input[type="email"]::-webkit-input-placeholder,
#subscribe-form input[type="email"]::-moz-placeholder,
#subscribe-form input[type="email"]:-moz-placeholder ,
#subscribe-form input[type="email"]:-ms-input-placeholder,
#subscribe-form input[type="email"]::placeholder,
#subscribe-form input[type="email"]:placeholder-shown {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

#subscribe-form .btn-primary.disabled:hover,
#subscribe-form .btn-primary:disabled:hover {
    background-color: rgba(18,212,196,.8);
    border-color: rgba(18,212,196,.8);
    color: #fff;
    -webkit-box-shadow: none;
    box-shadow: none;
}

/* --------------------------------------
 Button style
-----------------------------------------*/

.btn {
    border-radius: 84px;
    position: relative;
    background-color: rgb(255, 255, 255);
    font-weight: bold;
    letter-spacing: 1px;
}

@media screen and (max-width: 390px) {
    .btn{
        max-width: 80vw;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
    }
}

.btn-primary {
    background-color: rgba(18, 212, 196, 1);
    border-color: rgba(18, 212, 196, 1);
    color: #FFF;
}

.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active {
    background-color: rgba(18, 212, 196, 0.8);
    border-color: rgba(18, 212, 196, 0.8);
    color: #FFF;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.btn-secondary {
    border: 2px solid rgba(137, 138, 234, 1);
}

.btn-secondary:hover,
.btn-secondary:focus,
.btn-secondary:active {
    border-color: rgba(137, 138, 234, 0.8);
    background-color: rgb(255, 255, 255);
    color: rgba(137, 138, 234, 1);
    -webkit-box-shadow: none;
    box-shadow: none;
}

.btn-info {
    min-height: 45px;
    min-width: 210px;
    border-color: rgba(137, 138, 234, 1);
    background-color: rgba(137, 138, 234, 1);
    box-shadow: 0 4px 7px 0 rgba(137, 138, 234, 0.48);
    line-height: 27px;
}

.btn-info:hover,
.btn-info:focus,
.btn-info:active {
    border-color: rgba(137, 138, 234, 0.9);
    background-color: rgba(137, 138, 234, 0.9);
    color: rgb(255, 255, 255);
    box-shadow: 0 4px 7px 0 rgba(137, 138, 234, 0.58);
}

.with-icon {
    padding-right: 42px;
    display: inline-block;
}

.with-icon::after {
    content: '';
    position: absolute;
    right: 10px;
    top: 50%;
    margin-top: -15px;
    display: block;
    width: 30px;
    height: 30px;
    background-color: rgba(158, 159, 250, 1);
    background-image: url("/images/arrow-pointing-to-right.svg");
    background-position: 50% 50%;
    background-repeat: no-repeat;
    border-radius: 100%;
}

.with-icon.green::after {
    background-color: rgba(51, 255, 238, 1);
}

.locale .custom-select {
    border-radius: 84px;
    border: 2px solid rgba(137, 138, 234, 1);
    font-family: 'Poppins', sans-serif;
    font-size: 14px;
    font-weight: bold;
    color: black;
}

/* --------------------------------------
 Header
-----------------------------------------*/
header {
    position: relative;
    text-align: center;
    color: #fff;
    /*min-height: 430px;*/
}

header .header-nav .nav-link {
    line-height: 37px;
}

header .header-nav .nav-link a {
    margin: 4px 20px 0 0;
    font-weight: 500;
    font-size: 14px;
    display: inline-block;
}

header .header-nav .nav-link a.start {
    font-size: 14px;
    line-height: 21px;
    min-width: 168px;
    font-weight: bold;
    letter-spacing: 1px;
    margin: 0;
}

header .header-nav .nav-link a.apply {
    font-size: 14px;
    font-weight: bold;
    min-width: 225px;
    line-height: 21px;
    letter-spacing: 1px;
    margin: 0;
}

header .launch-circle-info {
    text-align: center;
    /*23.88535031847134vh*/
    margin-top: 128px;
}

header .launch-circle-info h1 {
    height: 80px;
    color: rgba(54, 52, 57, 1);
    font-weight: 300;
    font-size: 26px;
    max-width: 963px;
    letter-spacing: 1.2px;
    line-height: 40px;
    text-align: center;
    padding: 0;
    margin-bottom: 42px;
    display: inline-table;
}

header .launch-circle-info h1 span {
    font-weight: 600;
}

header .launch-circle-info h3 {
    height: 23px;
    color: rgba(156, 155, 160, 1);
    font-size: 14px;
    line-height: 23px;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: .6px;
    margin-bottom: 15px;
}

header .launch-circle-images {
    margin-top: 97px;
}

.navigation {
    position: relative;
    z-index: 20;
    width: 100%;
    padding-left: .5em;
    padding-right: .5em;
}

header .navbar {
    margin-top: 37px;
}

.navigation.stuck {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    margin: 0 auto;
    background: #FFF;
    width: 100%;
    margin: 0;
    padding: 0 30px !important;
    border-bottom: 1px solid #e8e8e8;

}

header .stuck .navbar {
    margin-top: 0px;
}
/* ... */

